<resources>
    <string name="app_name">Medvisor</string>

    <!-- Strings related to user view data -->
    <string name="user_name">user name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_forget_password">Forget Password?</string>
    <string name="user_signup_now"><u>Dont\'t have account? Sign up now!</u></string>
    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="user_profile">Profile</string>
    <string name="user_feedback">Send feedback</string>
    <string name="user_start_prediction">Start prediction</string>
    <string name="user_previous_results">Previous results</string>
    <string name="user_gender">Gender</string>
    <string name="user_login_now"><u>Already have account? Login now!</u></string>
    <string name="user_search_doctors">Search on doctor</string>
    <string name="user_list_specialities">Specialities</string>
    <string name="user_welcome">I can help you find out what\'s going on. Just start a disease prediction</string>
    <string name="user_menu_open">Open</string>
    <string name="user_menu_close">Close</string>
    <string name="user_signup">Sign Up</string>
    <string name="user_birthdate">Birth date</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_symptom_search">e.g. صداع</string>
    <string name="user_prediction_question">Are you face any of these symptoms?</string>
    <string name="user_home_page">Home</string>
    <string name="user_dont_have_symptom">Don\'t have any of theses symptoms</string>
    <string name="user_end_prediction">Don\'t forget that this is not a medical diagnosis. If in doubt it is always best to seek advice from a medical professional.</string>
    <string name="user_view_result">View Result</string>
    <string name="user_predicted_diseases">Predicted Diseases</string>
    <string name="user_predicted_doctors">Predicted Doctors</string>
    <string name="user_weight">Weight (kg)</string>
    <string name="user_height">Height (cm)</string>
    <string name="user_update">Update</string>
    <string name="user_reset">Reset Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="user_feedback_title">Title</string>
    <string name="user_feedback_content">Content</string>
    <string name="user_send">Send</string>
    <string name="user_specilaty">Specialties</string>
    <string name="user_prediction_result">Prediction Result</string>
    <string name="user_doctor_name">Doctor Name</string>
    <string name="user_delete_result">Delete Result</string>
    <string name="user_back">Back</string>
    <string name="user_doctor_profile">Doctor Profile</string>
    <string name="user_doctor_city">City</string>
    <string name="user_doctor_address">Address</string>
    <string name="user_doctor_information">Information</string>
    <string name="user_doctor_rate">Your Rating</string>
    <string name="user_general_rate">General Rate</string>
    <string name="user_rate_us">Rate Us</string>

    <!-- Strings related to error view -->
    <string name="error_general">Something goes wrong, please try again</string>
    <string name="error_empty_data">Please fill all empty fields</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_short_password">Password should be at least 6 character</string>
    <string name="error_user_notfound">User not founded</string>
    <string name="error_server">Server error</string>
    <string name="error_taken_data">User email or password already taken</string>
    <string name="error_login">Login failed, try again</string>
    <string name="error_taken_email">This email already taken</string>
    <string name="error_notfound_email">This email not registered</string>
    <string name="error_taken_password">This password already taken</string>
    <string name="error_notmatch_password">Password not matched</string>

</resources>
