<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="20dp">


      <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_marginBottom="15dp"
          android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_input"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_input"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_input"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue"
        android:textColorHint="@color/blue" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_margin="5dp"
            android:text="@string/user_birthdate"
            android:layout_gravity="center_vertical"
            android:textColor="@color/blue" />
        <DatePicker
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:calendarViewShown ="false"
            android:datePickerMode ="spinner"
            android:hint="@string/user_birthdate"
            android:textColor="@color/black"
            android:textColorHighlight="@color/blue"
            android:textColorHint="@color/blue" >
        </DatePicker>
    </LinearLayout>


         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
                 android:layout_margin="5dp"
                 android:text="@string/user_gender"
                 android:textColor="@color/blue" />
             <RadioButton
                 android:id="@+id/male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="@string/user_male"
                 android:buttonTint="@color/blue"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/blue"
                 android:textColorHint="@color/blue"
                 android:checked="true"/>
             <RadioButton
                 android:id="@+id/female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="@string/user_female"
                 android:buttonTint="@color/blue"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/blue"
                 android:textColorHint="@color/blue"/>
         </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:text="@string/user_signup"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:onClick="Register"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>
        <ProgressBar
            android:id="@+id/registerProgress"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </FrameLayout>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:onClick="Login"
        android:text="@string/user_login_now"
        android:textColor="@color/blue" />

</LinearLayout>