<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textColor="@color/blue"
            android:textSize="25dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="BackHome"
                android:layout_gravity="center"
                android:id="@+id/homeBtn">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/backImg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/blue"
                    android:text="@string/user_home_page"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </FrameLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_icon" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/userheight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_height"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/userweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_weight"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    android:text="@string/user_birthdate"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/blue" />
                <DatePicker
                    android:id="@+id/birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:calendarViewShown ="false"
                    android:datePickerMode ="spinner"
                    android:hint="@string/user_birthdate"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/blue"
                    android:textColorHint="@color/blue" >
                </DatePicker>
            </LinearLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    android:text="@string/user_gender"
                    android:textColor="@color/blue" />
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/user_male"
                    android:buttonTint="@color/blue"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/blue"
                    android:textColorHint="@color/blue"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/user_female"
                    android:buttonTint="@color/blue"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/blue"
                    android:textColorHint="@color/blue"/>
            </RadioGroup>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerBtn"
                    android:text="@string/user_update"
                    android:shadowColor="@android:color/transparent"
                    android:padding="15dp"
                    android:onClick="UpdateProfile"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_button"/>
                <ProgressBar
                    android:id="@+id/registerProgress"
                    android:indeterminateDrawable="@drawable/progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>