<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_doctor_profile"
            android:textColor="@color/blue"
            android:textSize="25dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="Back"
                android:layout_gravity="center"
                android:id="@+id/homeBtn">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/backImg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/blue"
                    android:text="@string/user_back"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </FrameLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_icon" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/user_doctor_name"
                    android:textSize="25dp" />

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7A7A7A"
                android:text="ahmed ayman"
                android:layout_marginBottom="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_doctor_city"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/doctorCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7A7A7A"
                android:text="Cairo"
                android:layout_marginBottom="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_doctor_address"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/doctorAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7A7A7A"
                android:text="Cairo"
                android:layout_marginBottom="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_doctor_information"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/doctorInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7A7A7A"
                android:text="Cairo"
                android:layout_marginBottom="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_general_rate"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/doctorRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7A7A7A"
                android:text="Cairo"
                android:layout_marginBottom="10dp"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_doctor_rate"
                android:textSize="25dp" />
            <RatingBar
                android:id="@+id/rateDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:stepSize="1"
                android:numStars="5"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>